<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_code"
        android:inputType="text|textCapCharacters"
        android:ems="10" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_price"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bogo_discount"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <EditText
        android:id="@+id/txtBogoBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bogo_buy"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtBogoGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="16dp"
        android:hint="@string/bogo_get"
        android:inputType="number" />

</LinearLayout>
</ScrollView>