<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:saovietcrm="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        saovietcrm:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_new"
        saovietcrm:showAsAction="ifRoom|collapseActionView"
        android:title="@string/add"/>

    <item android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_white"
        saovietcrm:showAsAction="ifRoom|collapseActionView"
        android:title="@string/filter"/>

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_discard"
        saovietcrm:showAsAction="ifRoom|collapseActionView"
        android:title="@string/delete"/>
</menu>
