<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="16dp"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            />
        <Button 
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:id="@+id/btnSave"
            android:text="@string/save"
            />
        
    </LinearLayout>

</LinearLayout>
</ScrollView>